[package]
name = "keystone"
version = "0.1.0"
description = "High-level bindings for Keystone assembler"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/EvansJahja/keystone-rs-standalone"
readme = "README.md"
keywords = ["assembler", "keystone"]

[dependencies]
keystone-sys = { version = "0.1.1" }
